# RAG_league

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 396e70d3d253_initial_schema.py
lolrag/: __main__.py  config.py  indexing.py  ingestion.py  pipeline.py
lolrag/db/: models.py  session.py
lolrag/eval/: dataset.py  golden_dataset.json  judge.py  metrics.py  runner.py
tests/: test_db_models.py  test_eval_metrics.py  test_indexing.py  test_ingestion.py  test_main.py  test_pipeline.py
tests/eval/: test_eval_run.py
tests/fixtures/: champion_detail_fixture.json  champion_fixture.json
