[project]
name = "lolrag"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "chromadb>=1.5.9",
    "httpx>=0.28.1",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.5.0",
    "langchain-google-genai>=4.2.7",
    "langchain-huggingface>=1.2.2",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.2",
    "langsmith>=0.10.9",
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "truststore>=0.10.4",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
markers = [
    "integration: requires network and API keys",
    "eval: runs the evaluation harness against the real corpus and LLM (needs GOOGLE_API_KEY and a built index)",
]
addopts = "-m 'not integration and not eval'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.hatch.build.targets.wheel]
packages = ["lolrag"]
